# MaterialQt

./: .gitignore  CMakeLists.txt  Main.qml  MaterialColorGenerator.cpp  MaterialColorGenerator.h  main.cpp  readme.md
